fix(footer): alignment fixes for more info links

--- a/liberty-starter-application/src/main/webapp/css/style.css
+++ b/liberty-starter-application/src/main/webapp/css/style.css
@@ -622,7 +622,7 @@ body {
 
 .linksForMoreInformation {
     float: right;
-    margin: -38px 0 0;
+    margin: -38px 56px 0 0;
     width: 300px;
 }
 
@@ -630,7 +630,6 @@ body {
     color: #fff;
     font-family: "HelvNeueBold";
     font-size: 18px;
-    font-weight: bold;
     margin-bottom: 20px;
 }
 
